# fabricaOvino_Backend

./: docker-compose.yml  pyproject.toml
backend/: README.md  settings.py  urls.py
backend/core/: admin.py  apps.py  permissions.py
backend/core/migrations/: 0022_alter_birth_id_alter_breed_id_alter_category_id_and_more.py
backend/core/models/: birth.py  breed.py  category.py  feed.py  lots.py  pregnancyDiagnosis.py  shearing.py  sheep.py  user.py
backend/core/pagination/: customPageNumberPagination.py
backend/core/serializers/: birth.py  breed.py  category.py  feed.py  group.py  lots.py  permission.py  pregnancyDiagnosis.py  shearing.py  sheep.py  user.py
backend/core/views/: birth.py  breed.py  category.py  feed.py  group.py  lots.py  permission.py  pregnancyDiagnosis.py  shearing.py  sheep.py  user.py
